# notes

./: README.md  notes_javascript.js  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
doc/: hypothesis.ipynb
src/flanasonic/: __init__.py
