
[build-system]
requires = ['setuptools >= 75']
build-backend = 'setuptools.build_meta'

[project]
name = 'flanasonic_python_notes'
version = '0.1.0'
description = 'Various examples - mostly Python'
authors = [{ name = 'Julie Parsons' }]
license = { file= 'LICENSE' }
readme = 'README.md'
dependencies = [
    'pyarrow',
    'pandas',
    'duckdb',
    'pytest',
    'hypothesis',
    'jupyterlab'
]

[tool.pytest.ini_options]
pythonpath = [ 'src' ]
testpaths = [ 'src' ]